--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.example.mvvvmsampleapp.ui.auth.AuthViewModel" />
+
+
+    </data>
+
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -65,6 +73,7 @@
                     android:id="@+id/edit_text_name"
                     android:hint="Raghav Arya"
                     android:inputType="text"
+                    android:text="@={viewmodel.name}"
                     android:drawablePadding="16dp"
                     android:drawableLeft="@drawable/ic_name"
                     android:background="@drawable/edit_text_round_gray_background"
@@ -77,6 +86,7 @@
                     android:id="@+id/edit_text_email"
                     android:hint="rags@gmail.com"
                     android:inputType="textEmailAddress"
+                    android:text="@={viewmodel.email}"
                     android:drawablePadding="16dp"
                     android:drawableLeft="@drawable/ic_email"
                     android:background="@drawable/edit_text_round_gray_background"
@@ -89,6 +99,7 @@
                     android:id="@+id/edit_text_password"
                     android:inputType="textPassword"
                     android:hint="password"
+                    android:text="@={viewmodel.password}"
                     android:drawablePadding="16dp"
                     android:drawableLeft="@drawable/ic_lock"
                     android:background="@drawable/edit_text_round_gray_background"
@@ -101,6 +112,7 @@
                     android:id="@+id/edit_text_password_confirm"
                     android:inputType="textPassword"
                     android:hint="confirm password"
+                    android:text="@={viewmodel.passwordconfirm}"
                     android:drawablePadding="16dp"
                     android:drawableLeft="@drawable/ic_lock"
                     android:background="@drawable/edit_text_round_gray_background"
@@ -123,6 +135,7 @@
                     android:layout_gravity="center_horizontal"
                     android:textAllCaps="false"
                     android:text="Sign Up"
+                    android:onClick="@{viewmodel :: onSignupButtonClick}"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"/>
 
@@ -135,6 +148,7 @@
                 android:layout_centerHorizontal="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:layout_below="@id/linearLayout2"
+                android:onClick="@{viewmodel::onLogin}"
                 android:textAlignment="center"
                 android:text="Already have an account?\nSign in Here"
                 android:layout_width="wrap_content"
