--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        
+
         <variable
             name="viewmodel"
             type="com.example.mvvvmsampleapp.ui.auth.AuthViewModel" />
@@ -73,7 +73,6 @@
                 android:padding="18dp">
 
                 <EditText
-                    android:text="@={viewmodel.email}"
                     android:id="@+id/edit_text_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -83,11 +82,11 @@
                     android:drawablePadding="16dp"
                     android:hint="rags@gmail.com"
                     android:inputType="textEmailAddress"
-                    android:padding="12dp" />
+                    android:padding="12dp"
+                    android:text="@={viewmodel.email}" />
 
                 <EditText
 
-                    android:text="@={viewmodel.password}"
                     android:id="@+id/edit_text_password"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -97,7 +96,8 @@
                     android:drawablePadding="16dp"
                     android:hint="password"
                     android:inputType="textPassword"
-                    android:padding="12dp" />
+                    android:padding="12dp"
+                    android:text="@={viewmodel.password}" />
 
                 <TextView
                     android:id="@+id/text_view_forget_password"
@@ -109,11 +109,11 @@
                     android:textColor="@color/colorPrimaryDark" />
 
                 <Button
-                    android:onClick="@{viewmodel::onLoginButtonClick}"
                     android:id="@+id/button_sign_in"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:onClick="@{viewmodel::onLoginButtonClick}"
                     android:text="Sign In"
                     android:textAllCaps="false" />
 
@@ -123,10 +123,10 @@
                 android:id="@+id/text_view_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{viewmodel::onSignup}"
                 android:layout_below="@id/linearLayout2"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
+                android:onClick="@{viewmodel::onSignup}"
                 android:text="Don't have an account?\nSign Up Here"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
