--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/fragmetHome"
+        android:title="Home">
+
+    </item>
+    <item
+        android:id="@+id/fragmetUsers"
+        android:title="Users">
+
+    </item>
+
 </menu>
