--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/fragmetHome"
+        android:id="@+id/profileFragment"
         android:title="Home">
 
     </item>
     <item
-        android:id="@+id/fragmetUsers"
-        android:title="Users">
+        android:id="@+id/quotesFragment"
+        android:title="Quotes">
 
     </item>
 
