--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,14 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
 
-        <variable
-            name="viewmodel"
-            type="com.example.mvvvmsampleapp.ui.auth.AuthViewModel" />
-
-
-    </data>
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -83,7 +76,7 @@
                     android:hint="Raghav Arya"
                     android:inputType="text"
                     android:padding="12dp"
-                    android:text="@={viewmodel.name}" />
+                     />
 
                 <EditText
                     android:id="@+id/edit_text_email"
@@ -95,8 +88,7 @@
                     android:drawablePadding="16dp"
                     android:hint="rags@gmail.com"
                     android:inputType="textEmailAddress"
-                    android:padding="12dp"
-                    android:text="@={viewmodel.email}" />
+                    android:padding="12dp" />
 
                 <EditText
                     android:id="@+id/edit_text_password"
@@ -108,8 +100,7 @@
                     android:drawablePadding="16dp"
                     android:hint="password"
                     android:inputType="textPassword"
-                    android:padding="12dp"
-                    android:text="@={viewmodel.password}" />
+                    android:padding="12dp" />
 
                 <EditText
                     android:id="@+id/edit_text_password_confirm"
@@ -121,8 +112,7 @@
                     android:drawablePadding="16dp"
                     android:hint="confirm password"
                     android:inputType="textPassword"
-                    android:padding="12dp"
-                    android:text="@={viewmodel.passwordconfirm}" />
+                    android:padding="12dp" />
 
                 <TextView
                     android:id="@+id/text_view_forget_password"
@@ -138,7 +128,7 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:onClick="@{viewmodel :: onSignupButtonClick}"
+
                     android:text="Sign Up"
                     android:textAllCaps="false" />
 
@@ -151,7 +141,7 @@
                 android:layout_below="@id/linearLayout2"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
-                android:onClick="@{viewmodel::onLogin}"
+
                 android:text="Already have an account?\nSign in Here"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
